Use `Set.of`